--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                     <a class="nav-link" href="#about">About <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                     <a class="nav-link" href="0034602164167"><img src="https://img.icons8.com/ios/452/incoming-call.png" alt="facebook" width="40px" height="40px"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7c/Spain_flag_icon.svg/1024px-Spain_flag_icon.svg.png" alt="facebook" width="25px" height="25px">
+                     <a class="nav-link" href="tel:0034602164167"><img src="https://img.icons8.com/ios/452/incoming-call.png" alt="facebook" width="40px" height="40px"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7c/Spain_flag_icon.svg/1024px-Spain_flag_icon.svg.png" alt="facebook" width="25px" height="25px">
 </a>        
                 </li>
 				    <li class="nav-item">
-                     <a class="nav-link" href="00212665816479"><img src="https://img.icons8.com/ios/452/incoming-call.png" alt="facebook" width="40px" height="40px"><img src="https://img.icons8.com/color/452/morocco-circular.png" alt="facebook" width="30px" height="30px">
+                     <a class="nav-link" href="tel:00212665816479"><img src="https://img.icons8.com/ios/452/incoming-call.png" alt="facebook" width="40px" height="40px"><img src="https://img.icons8.com/color/452/morocco-circular.png" alt="facebook" width="30px" height="30px">
 </a>        
                 </li>
                 <li class="nav-item">
